<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:paddingLeft="20dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onLoginBut"
            android:gravity="center_vertical"
            android:src="@drawable/login_photo_big" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_photo"
            android:layout_centerVertical="true"
            android:text="@string/sliding_un_login"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img_photo"
            android:layout_below="@+id/tv_nickname"
            android:layout_marginTop="3dp"
            android:text="@string/sliding_wonderful"
            android:textSize="12sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="45dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sliding_menu_device"/>

        <TextView
            android:id="@+id/tv_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/ota_device"
            android:textSize="16sp"
            android:textColor="@color/font_333"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/gray_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="45dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sliding_menu_spirit"/>

        <TextView
            android:id="@+id/tv_mapping_sprite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/pad_mapping_sprite"
            android:textSize="16sp"
            android:textColor="@color/font_333"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/gray_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="45dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sliding_menu_setting"/>

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/manage_setting"
            android:textSize="16sp"
            android:textColor="@color/font_333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/gray_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="45dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sliding_menu_disclaimer"/>

        <TextView
            android:id="@+id/tv_disclaimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/manage_disclaimer"
            android:textSize="16sp"
            android:textColor="@color/font_333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/gray_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="45dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sliding_menu_feedback"/>

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/sliding_feedback"
            android:textSize="16sp"
            android:textColor="@color/font_333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/gray_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:paddingLeft="45dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/sliding_menu_about"/>

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/sliding_about"
            android:textSize="16sp"
            android:textColor="@color/font_333"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/gray_1"/>

</LinearLayout>