<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ngame="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <RelativeLayout
        android:id="@id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_title_height"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/left_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:background="@drawable/back"/>

        <TextView
            android:id="@+id/left_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/left_but"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/ota_device"/>

        <TextView
            android:id="@+id/right_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/help"/>

    </RelativeLayout>

    <cn.ngame.store.view.RoundProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/title_bar"
        ngame:roundColor="@color/font_gray"
        ngame:roundProgressColor="@color/colorPrimary"
        ngame:textColor="@color/font_black_6"
        ngame:textSize="18sp"
        ngame:textIsDisplayable="true"
        ngame:roundWidth="5dp"/>


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_bar"
        android:divider="@color/gray"
        android:dividerHeight="1dp"
        android:layout_above="@+id/but1"/>


    <Button
        android:id="@+id/but1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/selector_blue_bt"
        android:text="@string/update_check"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</RelativeLayout>